<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/backgound"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/GameTitle"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:width="700dp"
        android:minHeight="70dp"
        android:src="@drawable/title"
        android:textSize="40dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="93dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameTitle"
        app:srcCompat="@drawable/gamelogo" />


    <Button
        android:id="@+id/btn_Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="44dp"
        android:width="200dp"
        android:background="@drawable/custombtn"
        android:fontFamily="@font/press_start_2p"
        android:onClick="PassGameActivity"
        android:text="@string/btn_Play"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_GameRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="200dp"
        android:background="@drawable/custombtn"
        android:fontFamily="@font/press_start_2p"
        android:onClick="PassRankActivity"
        android:text="@string/btn_GameRank"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Play" />

    <Button
        android:id="@+id/btn_YourRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="200dp"
        android:background="@drawable/custombtn"
        android:fontFamily="@font/press_start_2p"
        android:onClick="PlayerRecordActivity"
        android:text="@string/btn_YourRecord"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_GameRank" />





    <Button
        android:id="@+id/btn_Close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:width="200dp"
        android:background="@drawable/custombtn"
        android:fontFamily="@font/press_start_2p"
        android:onClick="CloseGame"
        android:text="@string/btn_Close"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_YourRecord" />




</androidx.constraintlayout.widget.ConstraintLayout>