<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".GameActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/gamingtime"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <TextView
        android:id="@+id/txt_GameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/txt_GameHeading"
        android:textColor="@color/white"

        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_WinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/txt_WinText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"

        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout style="@style/row">

            <Button
                android:id="@+id/btn_num1"
                style="@style/column"
                android:onClick="input" />

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/btn_num2"
                style="@style/column"
                android:onClick="input"/>

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/btn_num3"
                style="@style/column"
                android:onClick="input"/>

        </LinearLayout>

        <View style="@style/horizontalLine" />

        <LinearLayout style="@style/row">

            <Button
                android:id="@+id/btn_num4"
                style="@style/column"
                android:onClick="input"/>

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/btn_num5"
                style="@style/column"
                android:onClick="input"/>

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/btn_num6"
                style="@style/column"
                android:onClick="input"/>

        </LinearLayout>

        <View style="@style/horizontalLine" />

        <LinearLayout style="@style/row">

            <Button
                android:id="@+id/btn_num7"
                style="@style/column"
                android:onClick="input"/>

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/btn_num8"
                style="@style/column"
                android:onClick="input"/>

            <View style="@style/verticalLine" />

            <Button
                android:id="@+id/btn_num9"
                style="@style/column"
                android:onClick="input"/>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_continue"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button"
        app:backgroundTint="@null"
        android:fontFamily="@font/press_start_2p"
        android:onClick="btn_continue"
        android:text="@string/btn_continue"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <!-- winLine-->
    <TextView
        android:id="@+id/winLine"
        android:layout_width="380dp"
        android:layout_height="10dp"
        android:layout_marginTop="385dp"
        android:background="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>